--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-youtube": "^7.13.0",
+    "styled-components-carousel": "^0.2.0",
     "web-vitals": "^0.2.4"
   },
+  "proxy": "http://localhost:8080/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
