--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.9.1",
+    "react-hook-form": "^6.10.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-search-box": "^2.0.2",
