--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.0",
     "react-search-box": "^2.0.2",
     "react-youtube": "^7.13.0",
+    "recoil": "^0.1.2",
     "styled-components-carousel": "^0.2.0",
     "web-vitals": "^0.2.4"
   },
