--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-search-box": "^2.0.2",
+    "react-spinners": "^0.9.0",
     "react-youtube": "^7.13.0",
     "recoil": "^0.1.2",
     "styled-components-carousel": "^0.2.0",
