update compose and proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,13 @@ services:
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
+      - '3307:3306'
     expose:
-      # Opens port 3306 on the container
-      - '3306'
+      # Opens port 3307 on the container
+      - '3307'
       # Where our data will be persisted
     volumes:
-      - my-db:/var/lib/mysql
+      - ./my-db:/var/lib/mysql
 
   mysql-workbench:
     image: ghcr.io/linuxserver/mysql-workbench
@@ -42,38 +42,38 @@ services:
 
 ## server image
   api-music-player:
-  build:
-    context: ./server
-    dockerfile: Dockerfile.dev
-  stdin_open: true
-  volumes:
-    - '/user/app/server/node_modules'
-    - ./server:/usr/app/server
-  ports:
-    -8080:8080
-  environment:
-    HOST: "127.0.0.1" ## same as the database service name
-    PORT: 8080
-    PASSWORD: "Guyleifer7"
-    DATABASE: "music_player"
-    TOKEN_SECRET: "3d1c240f491a5d1338ea50b989289ca03e3ba050af50255f5e0078b4ca1da35e067a8e00addcd003379ac60735c0cb319fce1fd32d6b664e32eb756313293081"
-  depends_on:
-  - db-music_player 
+    build:
+      context: ./server
+      dockerfile: Dockerfile.dev
+    stdin_open: true
+    volumes:
+      - '/user/app/server/node_modules'
+      - ./server:/usr/app/server
+    ports:
+      - '8080:8080'
+    environment:
+      HOST: "127.0.0.1" ## same as the database service name
+      PORT: 8080
+      PASSWORD: "Guyleifer7"
+      DATABASE: "music_player"
+      TOKEN_SECRET: "3d1c240f491a5d1338ea50b989289ca03e3ba050af50255f5e0078b4ca1da35e067a8e00addcd003379ac60735c0cb319fce1fd32d6b664e32eb756313293081"
+    depends_on:
+      - db-music-player 
 
 
 ## client image
   app-music-player:
-  build:
-    context: ./client
-    dockerfile: Dockerfile.dev
-  stdin_open: true
-  volumes:
-    - '/user/app/client/node_modules'
-    - ./client:/usr/app/client
-  ports:
-    -3030:3000
-  depends_on:
-    - api-music-player ## server image
+    build:
+      context: ./client
+      dockerfile: Dockerfile.dev
+    stdin_open: true
+    volumes:
+      - '/user/app/client/node_modules'
+      - ./client:/usr/app/client
+    ports:
+      - '3030:3000'
+    depends_on:
+      - api-music-player ## server image
 
 volumes:
   db-music-player:
