--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # Use root/example as user/password credentials
-version: '3.1'
+version: "3.1"
 
 services:
   ## mysql Database service image
@@ -8,20 +8,20 @@ services:
     restart: always
     container_name: db-music-player
     environment:
-      MYSQL_DATABASE: music_player
+      MYSQL_DATABASE: music_player2
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
+      MYSQL_USER: "user"
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
+      MYSQL_PASSWORD: "password"
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: "password"
       MYSQL_TCP_PORT: 3307
     ports:
       # <Port exposed> : < MySQL Port running inside container>
-      - '3307:3306'
+      - "3307:3306"
     expose:
       # Opens port 3306 on the container
-      - '3306'
+      - "3306"
       # Where our data will be persisted
     volumes:
       - ./my-db:/var/lib/mysql
@@ -41,42 +41,58 @@ services:
       - IPC_LOCK
     restart: unless-stopped
 
-
-## server image
+  ## server image
   api-music-player:
+    command: ["./wait_for_it.sh", "mysql:3306"]
     build:
       context: ./server
       dockerfile: Dockerfile
     stdin_open: true
     container_name: api-music-player
     volumes:
-      - ./server:/usr/app/server
-      - '/usr/app/server/node_modules'
+      - ./server:/server
+      - "/server/node_modules"
     ports:
-      - '8080:8080'
+      - "8080:8080"
     environment:
       HOST: "db-music-player" ## same as the database service name
       PORT: 8080
       PASSWORD: "password"
-      DATABASE: "music_player"
+      DATABASE: "music_player2"
       TOKEN_SECRET: "6f8df0642f85304b486f5d0a32fb30e3b6fda446b3c2dc253ab2daf0b9ddf7ccbe1cfdfbb19ce9d980b75e922fec053833cfa2fa03d6e21f7d2be223d4fb79c8"
-      MYSQL_PORT: 3307
+      MYSQL_PORT: 3306
     depends_on:
-      - db-music-player 
+      - db-music-player
 
-
-## client image
+  ## client image
   app-music-player:
+    # command: ["./wait_for_it.sh", "api-music-player:8080"]
     build:
       context: ./client
       dockerfile: Dockerfile
     stdin_open: true
     container_name: app-music-player
     volumes:
-      - ./client:/usr/app/client
-      - '/usr/app/client/node_modules'
+      - ./client:/client
+      - "/client/node_modules"
     ports:
-      - '3030:3000'
+      - "3030:3000"
+    depends_on:
+      - api-music-player ## server image
+
+  ## native image
+  native-music-player:
+    # command: ["./wait_for_it.sh", "api-music-player:8080"]
+    build:
+      context: ./native
+      dockerfile: Dockerfile
+    stdin_open: true
+    container_name: native-music-player
+    volumes:
+      - ./native:/usr/app/native
+      - "/native/node_modules"
+    ports:
+      - "19000:19000"
     depends_on:
       - api-music-player ## server image
 
