--- a/native/package.json
+++ b/native/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-config": "^0.1.48",
     "@expo/vector-icons": "^12.0.2",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.9.8",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
