--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
     image: mysql:8
     cap_add:
       - SYS_NICE # CAP_SYS_NICE -> silently handles warnings
-    command: --default-authentication-plugin=mysql_native_password
+    command: --default-authentication-plugin=mysql_native_password --sql-mode=""
     restart: always
     environment:
+      CHOKIDAR_USEPOLLING: "true"
       MYSQL_ROOT_PASSWORD: password
       MYSQL_PASSWORD: password
       MYSQL_DATABASE: database_development
@@ -24,21 +25,31 @@ services:
       context: .
       dockerfile: Dockerfile
     image: myapplication
+    container_name: api-server
+    hostname: api-server
     ports:
       - "8080:8080" ## Change if your port is different
     networks:
       - application-network
-    command: "./wait-for-it/wait-for-it.sh mysql:3306 -- npm run spinupseed"
+    # command: "./wait-for-it/wait-for-it.sh mysql:3306 -- npm run spinup"
     environment:
+      CHOKIDAR_USEPOLLING: "true"
       MYSQL_USER: root
       MYSQL_PASSWORD: password
       MYSQL_DATABASE: database_development
       MYSQL_HOST: mysql
       SERVER_PORT: 8080 ## Change if your port is different
+    # volumes:
+    #   - ./server:/server
+    #   - /server/node_modules
+    #   - ./client:/client
+    #   - /client/node_modules
+    # - ./:/server/wait-for-it/wait-for-it.sh
 
 networks:
   application-network:
     driver: bridge
+
 volumes:
   mysql-data:
     driver: local
